Crash in [@ mozilla::layers::ImageBridgeParent::RecvUpdateAsyncPluginSurface]
Categories
(Core Graveyard :: Plug-ins, defect, P1)
Tracking
(firefox-esr68 unaffected, firefox70 unaffected, firefox71 unaffected, firefox72+ disabled, firefox73+ fixed)
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox70 | --- | unaffected |
| firefox71 | --- | unaffected |
| firefox72 | + | disabled |
| firefox73 | + | fixed |
People
(Reporter: marcia, Assigned: handyman)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
This bug is for crash report bp-a5c37af9-73f6-43ed-9058-f93520191122.
Seen while looking at Windows nightly crashes - crashes started in 20191121214422: https://bit.ly/2XDhhT2
Code was touched in Bug 1577336. ni on :handyman
Top 10 frames of crashing thread:
0 xul.dll mozilla::layers::ImageBridgeParent::RecvUpdateAsyncPluginSurface gfx/layers/ipc/ImageBridgeParent.cpp:525
1 xul.dll mozilla::layers::PImageBridgeParent::OnMessageReceived ipc/ipdl/PImageBridgeParent.cpp:587
2 xul.dll void mozilla::ipc::MessageChannel::DispatchMessage ipc/glue/MessageChannel.cpp:2130
3 xul.dll mozilla::ipc::MessageChannel::MessageTask::Run ipc/glue/MessageChannel.cpp:2003
4 xul.dll MessageLoop::DoWork ipc/chromium/src/base/message_loop.cc:523
5 xul.dll void base::MessagePumpForUI::DoRunLoop ipc/chromium/src/base/message_pump_win.cc:203
6 xul.dll base::MessagePumpWin::Run ipc/chromium/src/base/message_pump_win.h:79
7 xul.dll void MessageLoop::RunHandler ipc/chromium/src/base/message_loop.cc:308
8 xul.dll MessageLoop::Run ipc/chromium/src/base/message_loop.cc:290
9 xul.dll base::Thread::ThreadMain ipc/chromium/src/base/thread.cc:192
| Reporter | ||
Updated•6 years ago
|
| Assignee | ||
Comment 1•6 years ago
|
||
Looks like it just needs a null check.
Updated•6 years ago
|
| Assignee | ||
Comment 2•6 years ago
|
||
If the compositor has lost the D3D device, we cannot complete async plugin surface creation/blitting.
Comment 4•6 years ago
|
||
| bugherder | ||
Comment 5•6 years ago
|
||
I get a crash with same signature, but crash line is different.
Crash report
https://crash-stats.mozilla.org/report/index/a6ed3efd-c65c-409d-8047-069200191126
Seemingly, Null check is needed there, too.
| Reporter | ||
Comment 6•6 years ago
|
||
Hi David - Should we file a new bug for Comment 5?
| Assignee | ||
Comment 7•6 years ago
|
||
Sure, thanks. I'm going to investigate why this is happening but it could just be an occasional failure in getting the draw target that needs a null check.
| Comment hidden (obsolete) |
Same crash, on the latest Nightly:
https://crash-stats.mozilla.org/report/index/b2733b71-4fd7-489a-b8d8-d909d0191128
Comment 10•6 years ago
|
||
(In reply to David Parks (dparks) [:handyman] from comment #7)
Sure, thanks. I'm going to investigate why this is happening but it could just be an occasional failure in getting the draw target that needs a null check.
Yes, crash happened occasionally(I encountered only 2 times) when I moved to a tab containing Flash contents.
Additional info:
This and fixed crash have other signatures related to Bug 1600032.
And after crash have happened, crash that has signature only IPC related(Also Bug 1600032) repeated when I opened Flash content.
Comment 11•5 years ago
|
||
| backout | ||
This was backed out from Beta along with bug 1577336 to take care of the crashes reported in the other bugs.
https://hg.mozilla.org/releases/mozilla-beta/rev/3af5f7e1bd23
Updated•3 years ago
|
Updated•3 years ago
|
Description
•