Bug 1598680: Check that D3D device exists in async plugin rendering r=haik

If the compositor has lost the D3D device, we cannot complete async plugin surface creation/blitting.

Differential Revision: https://phabricator.services.mozilla.com/D54633